--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <button class="rock">Rock</button>
+    <button class="rock" id="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
 </body>
