--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
+    <div class="result"></div>
 </body>
 </html>
