--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
     <div class="result"></div>
+    <div class="score"></div>
+    <div class="winner"></div>
 </body>
 </html>
